--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap');
 
 @theme {
-    --color-peach: #fef8ed;
+    --color-peach: #fefae0 ;
     --color-babyblue: #ebf1ed;
     --color-babypink: #fee8d1;
     --font-montserrat: "Montserrat", sans-serif;
+    --font-crimson: "Crimson Text", serif;
 }   
 
 body {
