alterações no layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,25 @@
 @import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap");
 
 @theme {
-  --color-peach: #fefae0;
+  --color-peach: #f1d9af;
   --color-babyblue: #ebf1ed;
   --color-babypink: #fee8d1;
-  --color-navy: #1a237e;
+  --color-navy: blue;
+  --color-brown: #513c23;
+  --color-lightbrown: #a47e3b;
   --font-montserrat: "Montserrat", sans-serif;
   --font-crimson: "Crimson Text", serif;
+  --font-cormorant: "Cormorant Garamond", serif;
 }
 
 body {
   background-color: var(--color-peach);
   font-family: var(--font-montserrat);
+  background-image: url("./assets/rice-paper.png");
+  background-size: repeat; 
+  background-position: center;
+  background-attachment: fixed;
 }
