--- a/src/components/ModalAddNewBook/ModalAddNewBook.module.css
+++ b/src/components/ModalAddNewBook/ModalAddNewBook.module.css
@@ -14,7 +14,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #FFF;
+    background-color: #f9ecd4;
     padding: 25px;
     border-radius: 8px;
     width: 512px;
