--- a/src/components/BookFormModal/BookFormModal.module.css
+++ b/src/components/BookFormModal/BookFormModal.module.css
@@ -14,7 +14,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #f9ecd4;
+    background-color: #fff;
     padding: 25px;
     border-radius: 8px;
     width: 512px;
