--- a/src/components/BookModal/BookModal.module.css
+++ b/src/components/BookModal/BookModal.module.css
@@ -1,28 +1,35 @@
 .background {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #03091333;
-    backdrop-filter: blur(3px);
-    z-index: 20;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #03091333;
+  backdrop-filter: blur(3px);
+  z-index: 20;
 }
 
 .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 25px;
-    border-radius: 8px;
-    width: 512px;
-    box-shadow: 0 0 10px 5px #00000040;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    box-sizing: border-box;
-    cursor: auto;
-    z-index: 50;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 25px;
+  border-radius: 8px;
+  width: 512px;
+  box-shadow: 0 0 10px 5px #00000040;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  cursor: auto;
+  z-index: 50;
 }
+
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 312px;
+  }
+}
+
